overlays/stg/patch-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: backend
          image: rociomagnoni/atales-backend:stg-c45398b
