overlays/stg/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atales-app
spec:
  template:
    spec:
      containers:
        - name: atales-app
          image: rociomagnoni/atales-app:REPLACEME
