overlays/stg/patch-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: rociomagnoni/atales-frontend:stg-4cd81f6
