overlays/stg/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atales-app-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30002  # <- diferente a dev y prod
