overlays/stg/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atales-ingress   # 
spec:
  rules:
    - host: atales.local.stg
